suggest using dev containers and codespaces extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,8 @@
         "bierner.github-markdown-preview",
         "ms-vsliveshare.vsliveshare-pack",
         "pkief.material-icon-theme",
-        "akashrajkn.language-netlogo-code"
+        "akashrajkn.language-netlogo-code",
+        "ms-vscode-remote.remote-containers",
+        "github.codespaces"
     ]
 }
