--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,7 @@
         "pkief.material-icon-theme",
         "akashrajkn.language-netlogo-code",
         "ms-vscode-remote.remote-containers",
-        "github.codespaces"
+        "github.codespaces",
+        "ms-vscode.makefile-tools"
     ]
 }
