--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
         "editor.defaultFormatter": "tamasfe.even-better-toml"
     },
     "workbench.iconTheme": "material-icon-theme",
-    "makefile.makefilePath": "docs/Makefile"
+    "makefile.makefilePath": "docs/Makefile",
+    "python.linting.pydocstyleEnabled": true
 }
